# cybersec-projects

./: .gitignore  HISTORY.md  LICENSE  README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  SECURITY_PROJECT_BOARD.md
.github/: codeql-config.yml
.github/workflows/: security-scan.yml
aws-security-scanner/: README.md  requirements.txt  s3_scanner.py
aws-security-scanner/examples/: sample_report.txt
aws-security-suite/: .bandit  .safety-policy.yml  ASYNC_FOUNDATION_IMPLEMENTATION.md  COMPLIANCE_MAPPING.md  EC2_SECURITY_IMPLEMENTATION_REPORT.md  INSTALLATION_GUIDE.md  README.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  cli.py  pyproject.toml  security-check.sh
aws-security-suite/.github/workflows/: security.yml
aws-security-suite/core/: __init__.py  async_client.py  audit_context.py  finding.py  plugin.py  rate_limiter.py  scanner.py
aws-security-suite/plugins/: __init__.py
aws-security-suite/plugins/ec2/: README.md  __init__.py  enhanced_checks.py  remediation.py  scanner.py
aws-security-suite/plugins/iam/: __init__.py  scanner.py
aws-security-suite/plugins/lambda_func/: README.md  REFACTORING_SUMMARY.md  __init__.py  constants.py  refactoring_plan.md  scanner.py  scanner_refactored.py
aws-security-suite/plugins/lambda_func/analyzers/: __init__.py  environment_analyzer.py  event_source_analyzer.py  function_analyzer.py  layer_analyzer.py  monitoring_analyzer.py  permission_analyzer.py  vpc_analyzer.py
aws-security-suite/plugins/lambda_func/utils/: __init__.py  lambda_utils.py
aws-security-suite/plugins/rds/: README.md  __init__.py  remediation.py  scanner.py
aws-security-suite/plugins/s3/: README.md  __init__.py  async_scanner.py  scanner.py
aws-security-suite/tests/: __init__.py  conftest.py  test_async_audit_context.py  test_async_client.py  test_async_s3_plugin.py  test_ec2_comprehensive.py  test_ec2_plugin.py  test_lambda_plugin.py  test_phase1.py  test_rds_plugin.py
cloud-iam-analyzer/: README.md  iam_analyzer.py  requirements.txt
incident-response-automation/: README.md
linux-server-hardening/: apply-all.sh  check-hardening.sh  install-packages.sh  readme.md
linux-server-hardening/auditd-rules/: apply-auditd-rules.sh
linux-server-hardening/banner/: apply-banner.sh
linux-server-hardening/elk-stack/: README.md  docker-compose.yml  install_elasticsearch.sh
malware-analysis-lab/: README.md  examples.md  requirements.txt
network-security-scanner/: README.md  requirements.txt
password-analyzer/: readme.md
powershell-automation/: README.md
ssh-key-rotation/: id_rsa_rotated_2025-04-22_14-07-20  id_rsa_rotated_2025-04-22_14-07-20.pub  id_rsa_rotated_2025-04-22_14-14-25  id_rsa_rotated_2025-04-22_14-14-25.pub  old-keys.txt  readme.md  rotate-ssh-key.sh
web-app-firewall/: before-after.md  install-guide.md  readme.md
(+29 files in other folders)
